--- a/css/IRStyle.css
+++ b/css/IRStyle.css
@@ -1,23 +1,23 @@
 body {
     background-color: #FFFFFF;
     color: #000000;
-    font-family: 'VT323', monospace;
-    font-size: 19px;
+    font-family: 'Vollkorn', serif;
+    font-size: 24px;
     letter-spacing: 1.5px;
     line-height: 20px;
     padding: 0px;
     margin: 5%
   }
   h1 {
-  	font-family: 'VT323', monospace;
-    font-size: 15px;
+  	font-family: 'Vollkorn', serif;
+    font-size: 28px;
     margin-top: 2.5%;
     margin-left: 5%;
     margin-right: 5%;
   }
   h2 {
-  	font-family: 'VT323', monospace;
-    font-size: 15px;
+  	font-family: 'Vollkorn', serif;
+    font-size: 26px;
   }
     
   a
