--- a/css/paper.css
+++ b/css/paper.css
@@ -1,7 +1,7 @@
 @page { margin: 0 }
 body { margin: 0 }
 .sheet {
-  margin: 0;
+  margin: 5%;
   overflow: hidden;
   position: relative;
   box-sizing: border-box;
