--- a/css/Rider.css
+++ b/css/Rider.css
@@ -1,4 +1,5 @@
-body {
+body
+{
 	margin: 3% 5% 5%;
 	background-color: #FFFFFF;
 	font-family: VT323;
@@ -17,7 +18,7 @@ h2
 {
 	font-family: VT323;
 	font-size: 33px;
-	margin: 3% 1% -1% -2%;
+	margin: 3% 1% -0.5% -2%;
 }
 h3
 {
