--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,6 +24,10 @@ body {
      color: #ffffff;
     text-decoration: none;
   }
+
+table {
+  width: 95%;
+}
     
   #countup {
      text-align: left;
