--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -75,3 +75,42 @@ td {
     background: #000000;
     width: 100%;
 }
+
+
+.vertically p {
+ position: absolute;
+ width: 100%;
+ height: 100%;
+ margin: 0;
+ line-height: 50px;
+ text-align: center;
+ /* Starting position */
+ -moz-transform:translateY(50%);
+ -webkit-transform:translateY(50%); 
+ transform:translateY(50%);
+ /* Apply animation to this element */  
+ -moz-animation: vertically 20s linear infinite alternate;
+ -webkit-animation: vertically 20s linear infinite alternate;
+ animation: vertically 20s linear infinite alternate;
+}
+/* Move it (define the animation) */
+@-moz-keyframes vertically {
+ 0%   { -moz-transform: translateY(50%); }
+ 100% { -moz-transform: translateY(-50%); }
+}
+@-webkit-keyframes vertically {
+ 0%   { -webkit-transform: translateY(50%); }
+ 100% { -webkit-transform: translateY(-50%); }
+}
+@keyframes vertically {
+ 0%   { 
+ -moz-transform: translateY(50%); /* Browser bug fix */
+ -webkit-transform: translateY(50%); /* Browser bug fix */
+ transform: translateY(50%);    
+ }
+ 100% { 
+ -moz-transform: translateY(-50%); /* Browser bug fix */
+ -webkit-transform: translateY(-50%); /* Browser bug fix */
+ transform: translateY(-50%); 
+ }
+}
