--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -79,11 +79,11 @@ td {
 
 .vertically p {
  position: absolute;
- width: 100%;
+ width: 33%;
  height: 100%;
  margin: 0;
  line-height: 50px;
- text-align: center;
+ text-align: left;
  /* Starting position */
  -moz-transform:translateY(50%);
  -webkit-transform:translateY(50%); 
