--- a/css/Rider.css
+++ b/css/Rider.css
@@ -164,4 +164,5 @@ width: 75%;
 	-moz-box-shadow: 6px 6px 8px 0px #40007C;
 	-webkit-box-shadow: 6px 6px 8px 0px #40007C;
 	box-shadow: 6px 6px 8px 0px #40007C;
+	width: 95%;
 }
